# openpalace

./: .gitignore  AGENTS.md  BENCHMARK_RESULTS.md  CHEATSHEET.md  CLAUDE_DESKTOP_CONFIG.json  COMPARISON.md  DEMO.md  DEMOS.md  FINAL_NIGHT_SUMMARY.txt  FINAL_SUMMARY.md  FIXED.md  GOOD_MORNING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_LOG.md  MULTI_LANGUAGE_COMPLETE.md  MULTI_LANG_STATUS.md  QUICKSTART.md  README.md  STATUS.md  TREE_SITTER_ISSUE.md  TUTORIAL.md  benchmark_optimizations.py  invariants.toml.example  pyproject.toml  setup_palace.py  test_parser_debug.py  test_real_repos.py
docs/: API_INTEGRATION_GUIDE.md  CLAUDE.md  GLOSSARY.md  IMPLEMENTATION_SUMMARY.md  MASSIVE_SCALE_OPTIMIZATION.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_SERVER.md  MULTI_LANG.md  NIGHT_ITERATIONS.md  NIGHT_PROGRESS_SUMMARY.md  OPTIMIZATIONS_SUMMARY.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_QUICK_START.md  PALACE_MENTAL_V2.md  QUICKSTART_EN.md  README.md  V2_QUICKSTART.md  VERIFICATION_GUIDE.md
docs/plans/: 2025-02-15-palacio-mental-v2-design.md  2025-02-15-palacio-mental-v2-implementation.md
docs/reviews/: analysis.md
examples/: claude_integration.py  mcp_demo.py  v2_demo.py  v2_demo_simple.py
mcp_server/: __init__.py  server.py
mcp_server/prompts/: __init__.py  templates.py
mcp_server/resources/: __init__.py  metadata.py  stats.py
mcp_server/tools/: __init__.py  compression.py  indexing.py  query.py
palace/: __init__.py
palace/api/: __init__.py  context.py
palace/cli/: __init__.py  commands.py
palace/config/: __init__.py  db_config.py
palace/core/: __init__.py  activation.py  agent_interface.py  archival.py  ast_fingerprint.py  benchmark_v2.py  bloom_filter.py  compression.py  delta_encoding.py  dictionary_compression.py  hippocampus.py  maintenance.py  pca_compression.py  plasticity.py  product_quantization.py  serialization.py  sleep.py  toon.py  tree_sitter_v2.py
palace/formatters/: __init__.py  claude.py
palace/ingest/: __init__.py  extractors.py  invariants.py  pipeline.py  resolver.py
palace/ingest/invariants/: __init__.py  base.py  detector.py  registry.py
palace/ingest/parsers/: __init__.py  base.py  go.py  go_regex.py  go_treesitter.py  javascript.py  javascript_regex.py  javascript_treesitter.py  nextjs.py  python.py  registry.py  tree_sitter_parser.py  typescript.py  typescript_regex.py  typescript_treesitter.py
palace/shared/: config.py  exceptions.py  models.py
researchs/: 00_ULTIMATE_COMPRESSION_STRATEGY.md  01_product_quantization_jegou2011.md  02_bloom_filters_bloom1970.md  03_succinct_data_structures_jacobson1989.md  04_minhash_lsh_broder1997.md  05_tree_sitter_ast_parsing.md  06_fm_index_ferragina2000.md  07_hyperloglog_cardinality_estimation.md
scripts/: benchmark_v2_automated.py  install_v2.sh  migrate_v1_to_v2.py
tests/: __init__.py  night_kernel_benchmark.py  test_mcp_server.py
tests/integration/: test_multilang_repos.py  test_nextjs_real.py  test_v2_integration.py
tests/unit/: test_delta_encoding.py  test_dictionary_compression.py
(+16 files in other folders)
