[tool.poetry]
name = "palacio-mental"
version = "0.1.0"
description = "Cognitive memory system for code engineering"
authors = ["Palace Team"]
readme = "README.md"
packages = [{include = "palace"}]

[tool.poetry.dependencies]
python = "^3.10"
kuzu = "^0.5.0"
sqlite-vec = "^0.1.0"
sentence-transformers = "^2.2.0"
tree-sitter = "^0.20.0"
tree-sitter-python = "^0.20.0"
tree-sitter-typescript = "^0.20.0"
tree-sitter-rust = "^0.20.0"
tree-sitter-go = "^0.20.0"  # Allow newer versions
numpy = "^1.24.0"
typer = {extras = ["standard"], version = "^0.12.0"}
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
tenacity = "^8.2.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.5.0"
black = "^23.7.0"
ruff = "^0.0.280"
pre-commit = "^3.3.0"

[tool.poetry.scripts]
palace = "palace.cli.commands:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
